# nba-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
nba_cli/: api.py  cli.py  config.py  models.py  utils.py
