[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-cli"
version = "0.1.0"
description = "A CLI tool for NBA stats using BallDontLie API"
readme = "README.md"
authors = [{ name = "Shachar", email = "your@email.com" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0"
]

[project.scripts]
nba-cli = "nba_cli.cli:main"